<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>featurecat</groupId>
	<artifactId>lizzie</artifactId>
	<version>yzy2.5.3</version>

	<properties>
		<!-- Prevent warning: "[WARNING] Using platform encoding (UTF-8 actually)
			to copy filtered resources, i.e. build is platform dependent!" -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<skipTests>false</skipTests>
		<surefire.reportsDirectory>${project.build.directory}/surefire-reports</surefire.reportsDirectory>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>-Xlint:all</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>featurecat.lizzie.Lizzie</mainClass>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
							</transformers>
							<shadedArtifactAttached>true</shadedArtifactAttached>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<useFile>false</useFile>
					<reportsDirectory>${surefire.reportsDirectory}</reportsDirectory>
					<skipTests>${skipTests}</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.5.2</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failIfNoTests>true</failIfNoTests>
					<systemPropertyVariables>
						<lizzie.shaded.jar>${project.build.directory}/${project.build.finalName}-shaded.jar</lizzie.shaded.jar>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.15</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.spotify.fmt</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.29</version>
			</plugin>

		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.spotify.fmt</groupId>
										<artifactId>
											fmt-maven-plugin
										</artifactId>
										<versionRange>
											[2.29,)
										</versionRange>
										<goals>
											<goal>format</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>

		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna-platform</artifactId>
			<version>5.19.1</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20231013</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.16</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.6.3</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.5.3</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.5.3</version>
			<exclusions>
				<!-- Only zxing's command-line tools reference JCommander, and jai-imageio is a
					TIFF ImageIO plugin; the app only decodes QR codes from in-memory images
					(RemoteComputeDialog), so neither is reachable at runtime. -->
				<exclusion>
					<groupId>com.beust</groupId>
					<artifactId>jcommander</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.github.jai-imageio</groupId>
					<artifactId>jai-imageio-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.11.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>1.11.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>me.friwi</groupId>
			<artifactId>jcefmaven</artifactId>
			<version>127.3.1</version>
			<exclusions>
				<!-- JOGL is only referenced by JCEF's off-screen-rendering classes
					(org.cef.browser.CefBrowserOsr / CefRenderer, jdeps-verified). This app always
					creates windowed browsers (BrowserFrame sets windowless_rendering_enabled=false
					and createBrowser(..., osr=false)), and CefBrowserFactory/CefClient/CefAppBuilder
					link and initialize without JOGL on the classpath (verified with -Xverify:all),
					so these ~13MB of classes plus all-platform natives can never be loaded. -->
				<exclusion>
					<groupId>me.friwi</groupId>
					<artifactId>jogl-all</artifactId>
				</exclusion>
				<exclusion>
					<groupId>me.friwi</groupId>
					<artifactId>gluegen-rt</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- <dependency> <groupId>me.friwi</groupId> <artifactId>jcef-natives-windows-amd64</artifactId>
			<version>jcef-a51ff7f+cef-95.7.14+g9f72f35+chromium-95.0.4638.69</version>
			</dependency> -->

		<!-- <dependency> <groupId>me.friwi</groupId> <artifactId>jcef-natives-windows-i386</artifactId>
			<version>jcef-a51ff7f+cef-95.7.14+g9f72f35+chromium-95.0.4638.69</version>
			</dependency> -->

		<!-- <dependency> <groupId>me.friwi</groupId> <artifactId>jcef-natives-linux-amd64</artifactId>
			<version>jcef-a51ff7f+cef-95.7.14+g9f72f35+chromium-95.0.4638.69</version>
			</dependency> -->

		<!-- <dependency> <groupId>me.friwi</groupId> <artifactId>jcef-natives-macosx-amd64</artifactId>
			<version>jcef-a51ff7f+cef-95.7.14+g9f72f35+chromium-95.0.4638.69</version>
			</dependency> -->

		<dependency>
			<groupId>ch.ethz.ganymed</groupId>
			<artifactId>ganymed-ssh2</artifactId>
			<version>262</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.swinglabs.swingx/swingx-core -->
		<dependency>
			<groupId>org.swinglabs.swingx</groupId>
			<artifactId>swingx-core</artifactId>
			<version>1.6.4</version>
		</dependency>

		<!-- https://code.google.com/archive/p/juniversalchardet -->
		<dependency>
			<groupId>com.googlecode.juniversalchardet</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>1.0.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.jhlabs/filters -->
		<dependency>
			<groupId>com.jhlabs</groupId>
			<artifactId>filters</artifactId>
			<version>2.0.235</version>
		</dependency>

		<dependency>
			<groupId>org.java-websocket</groupId>
			<artifactId>Java-WebSocket</artifactId>
			<version>1.6.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>io.socket</groupId>
			<artifactId>socket.io-client</artifactId>
			<version>2.1.2</version>
		</dependency>

	</dependencies>
</project>
